# handover_controller_old

./: .gitignore  CMakeLists.txt  README.md
cortex/: clienttest.cpp  cortex.cpp  graph.h  plot.py
etc/: Handover.conf  Handover.in.conf  handover.conf.cmake  mc_etc.conf  mc_rtc.conf  real.conf  vrep.conf
src/: CMakeLists.txt  handover_admittanceTask.cpp  handover_admittanceTask.h  handover_approachObject.cpp  handover_approachObject.h  handover_complianceTask.cpp  handover_complianceTask.h  handover_controller.cpp  handover_controller.h  handover_minJerk.cpp  handover_minJerk.h  handover_step.cpp  handover_step.h  handover_traj.h  handover_trajectories.cpp  handover_trajectories.h  helper_functions.cpp  helper_functions.h  matplotlibcpp.h  mc_handover_controller.cpp  mc_handover_controller.h
src/steps/: GoHalfSittingStep.cpp  GoHalfSittingStep.h  GoInitPoseStep.cpp
states/: ApproachObjectStep.cpp  ApproachObjectStep.h  CMakeLists.txt  CloseGrippersStep.cpp  CloseGrippersStep.h  ForceControlGrippersStep.cpp  ForceControlGrippersStep.h  GoDummyPoseStep.cpp  GoDummyPoseStep.h  GoHalfSittingStep.cpp  GoHalfSittingStep.h  GoInitPoseStep.cpp  GoInitPoseStep.h  OpenGrippersStep.cpp  OpenGrippersStep.h  StartMocapStep.cpp  StartMocapStep.h
